--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,5 +8,7 @@
     <string name="button_puzzle_text">Puzzle</string>
     <string name="button_war_text">War</string>
     <string name="button_storytelling_text">Storytelling</string>
-    <string name="textAcelerometer">1. Reaload your gun 2. Shot !!</string>
+    <string name="text_acelerometer">Reload</string>
+    <string name="text_swap">Swap your weapon</string>
+
 </resources>
